@@ -1,3 +1,13 @@
+1999-08-09  Alex Lancaster  <alex@santafe.edu>
+
+	* analysis.h (EZGraph): Add two convenience methods for batch-mode
+	(non-graphical) instances of EZGraph
+	(+create:setFileOutput:, +create:setFileName:).
+
+	* EZGraph.[hm] ([EZGraph +create:setFileOutput:]): New convenience
+	method.
+	([EZGraph +create:setFileName:]): Likewise.
+
 1999-08-02  Alex Lancaster  <alex@santafe.edu>
 
 	* analysis.h (EZGraph): Add new convenience factory method to
